--- a/views/1.html
+++ b/views/1.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>isa</title>
   <link rel="stylesheet" href="../assets/css/history.css">
   <link rel="stylesheet" href="../assets/css/global.css">
 </head>
