--- a/views/2.html
+++ b/views/2.html
@@ -2,8 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>isa</title>
+  <link rel="stylesheet" href="../assets/css/global.css">
+  <link rel="stylesheet" href="../assets/css/5g.css">
 </head>
 <body>
-  <div>2</div>
+  <div class="g5">
+    <div class="bg">
+      <img src="../assets/img/5g/bg.png" alt="">
+    </div>
+    <div class="box">
+      <div class="logo">
+        <img src="../assets/img/5g/logo.png" alt="">
+      </div>
+      <div class="nav">
+        <a class="nav-btn nav-1" href="./5g/slide.html?id=1">
+          <div class="icon">
+            <img src="../assets/img/5g/index/1.png" alt="">
+          </div>
+          <div class="font">
+            <img src="../assets/img/5g/index/11.png" alt="">
+          </div>
+        </a>
+        <a class="nav-btn nav-2" href="./5g/click.html">
+          <div class="icon">
+            <img src="../assets/img/5g/index/2.png" alt="">
+          </div>
+          <div class="font">
+            <img src="../assets/img/5g/index/22.png" alt="">
+          </div>
+        </a>
+        <a class="nav-btn nav-3" href="./5g/slide.html?id=2">
+          <div class="icon">
+            <img src="../assets/img/5g/index/3.png" alt="">
+          </div>
+          <div class="font">
+            <img src="../assets/img/5g/index/33.png" alt="">
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
